added nav and main sections

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div class="menu">
           <div class="menu-content">
             <ul>
-              <li><a href="#"> home </a></li>
+              <li><a href="#" id="active"> home </a></li>
               <li><a href="#"> about </a></li>
-              <li><a href="#"> more page </a></li>
+              <li><a href="#"> services </a></li>
               <li><a href="#"> contact</a></li>
             </ul>
             <button class="btn">sign up /sign up</button>
@@ -36,5 +36,70 @@
         </div>
       </div>
     </nav>
+    <main>
+      <div class="main__area">
+        <div class="main-content">
+          <h1>MD KAWSAE ISLAM YESIN</h1>
+          <p>LEARNER / STUDENT, WEB DESIGN</p>
+          <div class="buttons">
+            <a href="#" class="main__btn btn1">more info </a>
+            <a href="#" class="main__btn" id="btn2"> hire me </a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <section>
+      <div class="aboutSkill">
+        <h2>MY SKILLS</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, vero.
+        </p>
+      </div>
+
+      <div class="skills-area">
+        <div class="skill">
+          <img src="./assets/images/icon/html.svg" alt="" />
+          <h5>html</h5>
+          <p>
+            The HyperText Markup Language, or HTML is the standard markup
+            language for documents designed to be displayed in a web browser. It
+            can be assisted by technologies such as Cascading Style Sheets (CSS)
+            and scripting languages such as JavaScript.
+          </p>
+        </div>
+        <div class="skill">
+          <img src="./assets/images/icon/css.svg" alt="" />
+          <h5>css</h5>
+          <p>
+            Image result for CSS Cascading Style Sheets (CSS) is a style sheet
+            language used for describing the presentation of a document written
+            in a markup language such as HTML. CSS is a cornerstone technology
+            of the World Wide Web, alongside HTML and JavaScript.
+          </p>
+        </div>
+        <div class="skill">
+          <img src="./assets/images/icon/css framework.svg" alt="" />
+          <h5>Tailwinid css</h5>
+          <p>
+            Tailwind UI is a collection of beautiful, fully responsive UI
+            components, designed and developed by us, the creators of Tailwind
+            CSS. It's got hundreds of ready-to-use examples to choose from, and
+            is guaranteed to help you find the perfect starting point for what
+            you want to build.
+          </p>
+        </div>
+        <div class="skill">
+          <img src="./assets/images/icon/js.svg" alt="" />
+          <h5>javascript</h5>
+          <p>
+            JavaScript, often abbreviated as JS, is a programming language that
+            conforms to the ECMAScript specification. JavaScript is high-level,
+            often just-in-time compiled and multi-paradigm. It has dynamic
+            typing, prototype-based object-orientation and first-class
+            functions.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
